syntax = "proto3";

package podkrepibg.account;

option go_package = "account";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
}

message CreateAccountRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message CreateAccountResponse {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message Account {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}
