syntax = "proto3";

package podkrepibg.campaigns;

option csharp_namespace = "Podkrepibg.Campaigns";
option go_package = "campaigns";

service CampaignsService {
  // creates a new campaign
  rpc CreateCampaign (CreateCampaignRequest) returns (CreateCampaignResponse);
}

message CreateCampaignRequest {
  string name = 1;
  string organizerId = 2;
}

message CreateCampaignResponse {
  string id = 1;
  string name = 2;
  int32 errorCode = 3;
  string errorMessage = 4;
}
